# prjcombine

./: .gitignore  404.html  Cargo.toml  LICENSE-0BSD.txt  README.md  custom-5e178fcf.css  fpga.html  index.html  terminology.html  toc-322a2cd5.js  toc-7918e1c1.js  toc-89d00db4.js  toc-a1e2f5e9.js  toc-b5179b2b.js  toc-baac7028.js  toc-d27c1e18.js  toc.html  toc.js
.github/: FUNDING.yml
coolrunner2/: bitstream.html  database.html  index.html  jtag.html  structure.html
crosslink/: clock.html  config.html  ebr.html  i2c.html  index.html  interconnect.html  io.html  mipi.html  plc.html  pll.html
databases/: coolrunner2.json  coolrunner2.txt  coolrunner2.zstd  crosslink.json  crosslink.txt  crosslink.zstd  ecp.json  ecp.txt  ecp.zstd  ecp2.json  ecp2.txt  ecp2.zstd  ecp2m.json  ecp2m.txt  ecp2m.zstd  ecp3.json  ecp3.txt  ecp3.zstd  ecp4.json  ecp4.txt  ecp4.zstd  ecp5.json  ecp5.txt  ecp5.zstd  fpgacore.json  fpgacore.txt  fpgacore.zstd  iCE40LM4K.json  iCE40LM4K.zstd  iCE40LP1K.json  iCE40LP1K.zstd  iCE40LP384.json  iCE40LP384.zstd  iCE40LP8K.json  iCE40LP8K.zstd  iCE40UL1K.json  iCE40UL1K.zstd  iCE40UP5K.json  iCE40UP5K.zstd  iCE5LP4K.json  (+143 more)
digilent/: daci.html  depp.html  devices.html  djtg.html  dmgt.html  (+5 more)
docgen/: Cargo.toml
docgen/src/: bsdata.rs  coolrunner2.rs  ecp.rs  interconnect.rs  main.rs  siliconblue.rs  spartan6.rs  speed.rs  tiledb.rs  ultrascale.rs  virtex.rs  virtex2.rs  virtex4.rs  xc2000.rs  xc9500.rs  xpla3.rs
prjcombine_hammer/: Cargo.toml
prjcombine_hammer/src/: lib.rs  run.rs
prjcombine_icecube_harvester/: Cargo.toml
prjcombine_icecube_harvester/src/: collect.rs  generate.rs  intdb.rs  main.rs  parts.rs  prims.rs  run.rs  sample.rs  sites.rs  xlat.rs
prjcombine_int/: Cargo.toml
prjcombine_int/src/: db.rs  grid.rs  lib.rs  print.rs
prjcombine_ise_dump/: Cargo.toml
prjcombine_ise_dump/src/: lib.rs  partgen.rs  rawdump.rs  xdlrc.rs
prjcombine_ise_hammer/: Cargo.toml
prjcombine_ise_hammer/src/: backend.rs  bram.rs  ccm.rs  clb.rs  clk.rs  cmt.rs  dcm.rs  diff.rs  dsp.rs  emac.rs  fgen.rs  fuzz.rs  gt.rs  gtz.rs  int.rs  intf.rs  io.rs  main.rs  mcb.rs  misc.rs  pcie.rs  ppc.rs  tbus.rs  tiledb.rs
prjcombine_ise_hammer/src/bram/: spartan6.rs  virtex.rs  virtex2.rs  virtex4.rs  virtex5.rs  virtex6.rs
prjcombine_ise_hammer/src/ccm/: virtex4.rs
prjcombine_ise_hammer/src/clb/: virtex.rs  virtex2.rs  virtex5.rs  xc4000.rs  xc5200.rs
prjcombine_ise_hammer/src/clk/: spartan6.rs  virtex.rs  virtex2.rs  virtex4.rs  virtex5.rs  virtex6.rs  virtex7.rs
prjcombine_ise_hammer/src/cmt/: virtex5.rs  virtex6.rs  virtex7.rs
prjcombine_ise_hammer/src/dcm/: spartan3e.rs  spartan6.rs  virtex.rs  virtex2.rs  virtex4.rs
prjcombine_ise_hammer/src/dsp/: spartan3adsp.rs  virtex4.rs  virtex5.rs  virtex6.rs
prjcombine_ise_hammer/src/emac/: virtex5.rs  virtex6.rs
prjcombine_ise_hammer/src/gt/: spartan6.rs  virtex2p.rs  virtex2px.rs  virtex4.rs  virtex5.rs  virtex6_gth.rs  virtex6_gtx.rs  virtex7.rs
prjcombine_ise_hammer/src/int/: virtex.rs  xc4000.rs  xc5200.rs
prjcombine_ise_hammer/src/io/: fpgacore.rs  iostd.rs  spartan6.rs  virtex.rs  virtex2.rs  virtex4.rs  virtex5.rs  virtex6.rs  virtex7.rs  xc4000.rs  xc5200.rs
prjcombine_ise_hammer/src/misc/: spartan6.rs  virtex.rs  virtex2.rs  virtex4.rs  virtex5.rs  virtex6.rs  virtex7.rs  xc4000.rs  xc5200.rs
prjcombine_ise_hammer/src/pcie/: spartan6.rs  virtex5.rs  virtex6.rs  virtex7.rs
prjcombine_ise_hammer/src/pll/: spartan6.rs
prjcombine_ise_hammer/src/ppc/: virtex2.rs  virtex4.rs  virtex5.rs
prjcombine_lattice_dump/: Cargo.toml
prjcombine_lattice_dump/src/: lib.rs
prjcombine_lattice_rawdump/: Cargo.toml
prjcombine_lattice_rawdump/src/: lib.rs
prjcombine_rdintb/: Cargo.toml
prjcombine_rdintb/src/: lib.rs
prjcombine_rdverify/: Cargo.toml
prjcombine_rdverify/src/: lib.rs
prjcombine_series7_rd2db/: Cargo.toml
prjcombine_series7_rd2db/src/: bond.rs  grid.rs  int.rs  lib.rs
prjcombine_spartan6/: Cargo.toml
prjcombine_spartan6/src/: bond.rs  bscan.rs  db.rs  expand.rs  expanded.rs  grid.rs  io.rs  lib.rs
prjcombine_spartan6_rd2db/: Cargo.toml
prjcombine_spartan6_rd2db/src/: bond.rs  grid.rs  int.rs
prjcombine_ultrascale/: Cargo.toml
prjcombine_ultrascale/src/: bond.rs  db.rs  expand.rs  expanded.rs  grid.rs  io.rs  lib.rs
prjcombine_ultrascale_naming/: Cargo.toml
prjcombine_ultrascale_naming/src/: lib.rs
prjcombine_ultrascale_rd2db/: Cargo.toml
prjcombine_ultrascale_rd2db/src/: bond.rs  grid.rs  int_u.rs  int_up.rs
prjcombine_ultrascale_rdverify/: Cargo.toml
prjcombine_ultrascale_rdverify/src/: lib.rs
prjcombine_v2xdl_verify/: Cargo.toml
prjcombine_v2xdl_verify/src/: cfg.rs  clb_lut4.rs  clb_lut6.rs  clkbuf.rs  dsp.rs  hard.rs  main.rs  ramb.rs  run.rs  types.rs  verify.rs  verilog.rs
prjcombine_versal/: Cargo.toml
prjcombine_versal/src/: bond.rs  expand.rs  expanded.rs  grid.rs  lib.rs  naming.rs
prjcombine_versal_naming/: Cargo.toml
prjcombine_versal_naming/src/: lib.rs
prjcombine_versal_rd2db/: Cargo.toml
prjcombine_versal_rd2db/src/: grid.rs  int.rs
prjcombine_versal_rdverify/: Cargo.toml
prjcombine_versal_rdverify/src/: lib.rs
prjcombine_virtex/: Cargo.toml
prjcombine_virtex/src/: bond.rs  bscan.rs  db.rs  expand.rs  expanded.rs  grid.rs  lib.rs
prjcombine_virtex2/: Cargo.toml
prjcombine_virtex2/src/: bond.rs  bscan.rs  db.rs  expand.rs  expanded.rs  grid.rs  iob.rs  lib.rs
prjcombine_virtex2_rd2db/: Cargo.toml
prjcombine_virtex2_rd2db/src/: bond.rs  grid.rs  int_s3.rs  int_v2.rs  lib.rs
prjcombine_virtex2_rdverify/: Cargo.toml
prjcombine_virtex2_rdverify/src/: clb.rs  clk.rs  io.rs  lib.rs
prjcombine_virtex4/: Cargo.toml
prjcombine_virtex4/src/: bond.rs  db.rs  expand.rs  expanded.rs  grid.rs  gtz.rs  io.rs  lib.rs
prjcombine_virtex4/src/expand/: virtex4.rs  virtex5.rs  virtex6.rs  virtex7.rs
prjcombine_virtex4_naming/: Cargo.toml
prjcombine_virtex4_naming/src/: lib.rs  virtex4.rs  virtex5.rs  virtex6.rs  virtex7.rs
prjcombine_virtex4_rdverify/: Cargo.toml
prjcombine_virtex4_rdverify/src/: lib.rs
(+2284 files in other folders)
