[workspace]

members = [
	"prjcombine_types",
	"prjcombine_toolchain",
	"prjcombine_rawdump",
	"prjcombine_rdbuild",
	"prjcombine_ise_dump",
	"prjcombine_vivado_dump",
	"prjcombine_lattice_dump",
	"prjcombine_lattice_rawdump",
	"prjcombine_int",
	"prjcombine_xc4k",
	"prjcombine_xc5200",
	"prjcombine_virtex",
	"prjcombine_virtex2",
	"prjcombine_spartan6",
	"prjcombine_virtex4",
	"prjcombine_ultrascale",
	"prjcombine_versal",
	"prjcombine_rdgrid",
	"prjcombine_rdintb",
	"prjcombine_rdverify",
	"prjcombine_xc4k_rdverify",
	"prjcombine_xc5200_rdverify",
	"prjcombine_virtex_rdverify",
	"prjcombine_virtex2_rdverify",
	"prjcombine_spartan6_rdverify",
	"prjcombine_virtex4_rdverify",
	"prjcombine_virtex5_rdverify",
	"prjcombine_virtex6_rdverify",
	"prjcombine_series7_rdverify",
	"prjcombine_ultrascale_rdverify",
	"prjcombine_versal_rdverify",
	"prjcombine_xc4k_rd2db",
	"prjcombine_xc5200_rd2db",
	"prjcombine_virtex_rd2db",
	"prjcombine_virtex2_rd2db",
	"prjcombine_spartan6_rd2db",
	"prjcombine_virtex4_rd2db",
	"prjcombine_virtex5_rd2db",
	"prjcombine_virtex6_rd2db",
	"prjcombine_series7_rd2db",
	"prjcombine_ultrascale_rd2db",
	"prjcombine_versal_rd2db",
	"prjcombine_xilinx_geom",
	"prjcombine_xilinx_rd2geom",
	"prjcombine_xdl",
	"prjcombine_v2xdl_verify",
	"prjcombine_virtex_bitstream",
	"prjcombine_hammer",
	"prjcombine_ise_hammer",
	"prjcombine_vm6",
	"prjcombine_xilinx_cpld",
	"prjcombine_xilinx_recpld",
	"prjcombine_sdf",
	"prjcombine_xc9500",
	"prjcombine_xpla3",
	"prjcombine_xc2c",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
prjcombine_types = { path = "prjcombine_types" }
prjcombine_rawdump = { path = "prjcombine_rawdump" }
prjcombine_rdbuild = { path = "prjcombine_rdbuild" }
prjcombine_toolchain = { path = "prjcombine_toolchain" }
prjcombine_xdl = { path = "prjcombine_xdl" }
prjcombine_int = { path = "prjcombine_int" }
prjcombine_rdgrid = { path = "prjcombine_rdgrid" }
prjcombine_rdintb = { path = "prjcombine_rdintb" }
prjcombine_rdverify = { path = "prjcombine_rdverify" }
prjcombine_xc4k = { path = "prjcombine_xc4k" }
prjcombine_xc4k_rdverify = { path = "prjcombine_xc4k_rdverify" }
prjcombine_xc4k_rd2db = { path = "prjcombine_xc4k_rd2db" }
prjcombine_xc5200 = { path = "prjcombine_xc5200" }
prjcombine_xc5200_rdverify = { path = "prjcombine_xc5200_rdverify" }
prjcombine_xc5200_rd2db = { path = "prjcombine_xc5200_rd2db" }
prjcombine_virtex = { path = "prjcombine_virtex" }
prjcombine_virtex_rdverify = { path = "prjcombine_virtex_rdverify" }
prjcombine_virtex_rd2db = { path = "prjcombine_virtex_rd2db" }
prjcombine_virtex2 = { path = "prjcombine_virtex2" }
prjcombine_virtex2_rdverify = { path = "prjcombine_virtex2_rdverify" }
prjcombine_virtex2_rd2db = { path = "prjcombine_virtex2_rd2db" }
prjcombine_virtex4 = { path = "prjcombine_virtex4" }
prjcombine_virtex4_rdverify = { path = "prjcombine_virtex4_rdverify" }
prjcombine_virtex4_rd2db = { path = "prjcombine_virtex4_rd2db" }
prjcombine_virtex5_rdverify = { path = "prjcombine_virtex5_rdverify" }
prjcombine_virtex5_rd2db = { path = "prjcombine_virtex5_rd2db" }
prjcombine_virtex6_rdverify = { path = "prjcombine_virtex6_rdverify" }
prjcombine_virtex6_rd2db = { path = "prjcombine_virtex6_rd2db" }
prjcombine_spartan6 = { path = "prjcombine_spartan6" }
prjcombine_spartan6_rd2db = { path = "prjcombine_spartan6_rd2db" }
prjcombine_spartan6_rdverify = { path = "prjcombine_spartan6_rdverify" }
prjcombine_series7_rdverify = { path = "prjcombine_series7_rdverify" }
prjcombine_series7_rd2db = { path = "prjcombine_series7_rd2db" }
prjcombine_ultrascale = { path = "prjcombine_ultrascale" }
prjcombine_ultrascale_rdverify = { path = "prjcombine_ultrascale_rdverify" }
prjcombine_ultrascale_rd2db = { path = "prjcombine_ultrascale_rd2db" }
prjcombine_versal = { path = "prjcombine_versal" }
prjcombine_versal_rdverify = { path = "prjcombine_versal_rdverify" }
prjcombine_versal_rd2db = { path = "prjcombine_versal_rd2db" }
prjcombine_xilinx_geom = { path = "prjcombine_xilinx_geom" }
prjcombine_lattice_rawdump = { path = "prjcombine_lattice_rawdump" }
prjcombine_virtex_bitstream = { path = "prjcombine_virtex_bitstream" }
prjcombine_hammer = { path = "prjcombine_hammer" }
prjcombine_vm6 = { path = "prjcombine_vm6" }
prjcombine_xilinx_cpld = { path = "prjcombine_xilinx_cpld" }
prjcombine_ise_dump = { path = "prjcombine_ise_dump" }
prjcombine_sdf = { path = "prjcombine_sdf" }
prjcombine_xc9500 = { path = "prjcombine_xc9500" }
prjcombine_xpla3 = { path = "prjcombine_xpla3" }
prjcombine_xc2c = { path = "prjcombine_xc2c" }
unnamed_entity = { version = "0.1", features = ["bitvec", "map", "serde"] }
assert_matches = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2", features = ["serde"] }
ndarray = { version = "0.15", features = ["serde"] }
enum-map = { version = "2.4", features = ["serde"] }
bitvec = { version = "1.0", features = ["serde"] }
itertools = "0.12"
rand = { version = "0.8", features = ["small_rng"] }
nix = { version = "0.27", features = ["fs"] }
tempfile = "3.0"
toml = "0.8"
zstd = "0.13"
bincode = "1.3"
clap = { version = "4.1", features = ["derive"] }
simple-error = "0.3"
regex = "1"
rayon = "1.5"
indicatif = "0.17"
arrayref = "0.3.6"
bimap = "0.6"
std-semaphore = "0.1"
which = "5"
derivative = "2.2"

[profile.dev]
opt-level = 2
debug = 2

[workspace.lints.clippy]
collapsible_else_if = "allow"
bool_to_int_with_if = "allow"
needless_range_loop = "allow"
