# NOTE: this is the workspace containing RE-only crates; for the public crate workspace, see public/Cargo.toml
#
# Dependency versions should be kept in sync between the two workspaces.

[workspace]
resolver = "3"
members = [
	"prjcombine_toolchain",
	"prjcombine_rawdump",
	"prjcombine_rdbuild",
	"prjcombine_ise_dump",
	"prjcombine_vivado_dump",
	"prjcombine_lattice_dump",
	"prjcombine_lattice_rawdump",
	"prjcombine_xilinx_naming",
	"prjcombine_xc2000_naming",
	"prjcombine_virtex_naming",
	"prjcombine_virtex2_naming",
	"prjcombine_virtex4_naming",
	"prjcombine_spartan6_naming",
	"prjcombine_ultrascale_naming",
	"prjcombine_versal_naming",
	"prjcombine_rdgrid",
	"prjcombine_rdintb",
	"prjcombine_rdverify",
	"prjcombine_xc4000_rdverify",
	"prjcombine_xc5200_rdverify",
	"prjcombine_virtex_rdverify",
	"prjcombine_virtex2_rdverify",
	"prjcombine_spartan6_rdverify",
	"prjcombine_virtex4_rdverify",
	"prjcombine_virtex5_rdverify",
	"prjcombine_virtex6_rdverify",
	"prjcombine_virtex7_rdverify",
	"prjcombine_ultrascale_rdverify",
	"prjcombine_versal_rdverify",
	"prjcombine_xc4000_rd2db",
	"prjcombine_xc5200_rd2db",
	"prjcombine_virtex_rd2db",
	"prjcombine_virtex2_rd2db",
	"prjcombine_spartan6_rd2db",
	"prjcombine_virtex4_rd2db",
	"prjcombine_virtex5_rd2db",
	"prjcombine_virtex6_rd2db",
	"prjcombine_virtex7_rd2db",
	"prjcombine_ultrascale_rd2db",
	"prjcombine_versal_rd2db",
	"prjcombine_xilinx_geom",
	"prjcombine_xilinx_rd2geom",
	"prjcombine_xdl",
	"prjcombine_v2xdl_verify",
	"prjcombine_hammer",
	"prjcombine_collector",
	"prjcombine_ise_hammer",
	"prjcombine_xact_naming",
	"prjcombine_xc2000_xact",
	"prjcombine_xact_data",
	"prjcombine_xact_geom",
	"prjcombine_xact_dump",
	"prjcombine_xact_hammer",
	"prjcombine_xilinx_rdis",
	"prjcombine_xilinx_finish",
	"prjcombine_harvester",
	"prjcombine_icecube_harvester",
	"prjcombine_vm6",
	"prjcombine_xilinx_cpld",
	"prjcombine_xilinx_recpld",
	"prjcombine_sdf",
]
exclude = [
	"public"
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "0BSD OR Apache-2.0"
repository = "https://github.com/prjunnamed/prjcombine"
authors = []

[workspace.dependencies]
# public crates and their dependencies
prjcombine-types = { path = "public/types" }
prjcombine-interconnect = { path = "public/interconnect" }
prjcombine-siliconblue = { path = "public/siliconblue" }
prjcombine-xilinx-bitstream = { path = "public/xilinx-bitstream" }
prjcombine-xc2000 = { path = "public/xc2000" }
prjcombine-virtex = { path = "public/virtex" }
prjcombine-virtex2 = { path = "public/virtex2" }
prjcombine-spartan6 = { path = "public/spartan6" }
prjcombine-virtex4 = { path = "public/virtex4" }
prjcombine-ultrascale = { path = "public/ultrascale" }
prjcombine-versal = { path = "public/versal" }
prjcombine-xc9500 = { path = "public/xc9500" }
prjcombine-xpla3 = { path = "public/xpla3" }
prjcombine-coolrunner2 = { path = "public/coolrunner2" }
# dependencies shared with public crates (keep in sync)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zstd = "0.13"
bincode = "1.3"
unnamed_entity = { version = "0.1.5", features = ["bitvec", "map", "serde"] }
bitvec = { version = "1.0", features = ["serde"] }
itertools = "0.14"
arrayvec = "0.7.6"
ndarray = { version = "0.16", features = ["serde"] }
enum-map = { version = "2.4", features = ["serde"] }
bimap = "0.6"
arrayref = "0.3.6"
des = "0.8.1"
cbc = "0.1.2"
aes = "0.8.4"
sha2 = "0.10.8"
assert_matches = "1.5"
clap = { version = "4.1", features = ["derive"] }
# RE-only crates and their dependencies
prjcombine_rawdump = { path = "prjcombine_rawdump" }
prjcombine_rdbuild = { path = "prjcombine_rdbuild" }
prjcombine_toolchain = { path = "prjcombine_toolchain" }
prjcombine_xdl = { path = "prjcombine_xdl" }
prjcombine_xilinx_naming = { path = "prjcombine_xilinx_naming" }
prjcombine_rdgrid = { path = "prjcombine_rdgrid" }
prjcombine_rdintb = { path = "prjcombine_rdintb" }
prjcombine_rdverify = { path = "prjcombine_rdverify" }
prjcombine_xc2000_naming = { path = "prjcombine_xc2000_naming" }
prjcombine_xc4000_rdverify = { path = "prjcombine_xc4000_rdverify" }
prjcombine_xc4000_rd2db = { path = "prjcombine_xc4000_rd2db" }
prjcombine_xc5200_rdverify = { path = "prjcombine_xc5200_rdverify" }
prjcombine_xc5200_rd2db = { path = "prjcombine_xc5200_rd2db" }
prjcombine_virtex_naming = { path = "prjcombine_virtex_naming" }
prjcombine_virtex_rdverify = { path = "prjcombine_virtex_rdverify" }
prjcombine_virtex_rd2db = { path = "prjcombine_virtex_rd2db" }
prjcombine_virtex2_naming = { path = "prjcombine_virtex2_naming" }
prjcombine_virtex2_rdverify = { path = "prjcombine_virtex2_rdverify" }
prjcombine_virtex2_rd2db = { path = "prjcombine_virtex2_rd2db" }
prjcombine_virtex4_naming = { path = "prjcombine_virtex4_naming" }
prjcombine_virtex4_rdverify = { path = "prjcombine_virtex4_rdverify" }
prjcombine_virtex4_rd2db = { path = "prjcombine_virtex4_rd2db" }
prjcombine_virtex5_rdverify = { path = "prjcombine_virtex5_rdverify" }
prjcombine_virtex5_rd2db = { path = "prjcombine_virtex5_rd2db" }
prjcombine_virtex6_rdverify = { path = "prjcombine_virtex6_rdverify" }
prjcombine_virtex6_rd2db = { path = "prjcombine_virtex6_rd2db" }
prjcombine_virtex7_rdverify = { path = "prjcombine_virtex7_rdverify" }
prjcombine_virtex7_rd2db = { path = "prjcombine_virtex7_rd2db" }
prjcombine_spartan6_rd2db = { path = "prjcombine_spartan6_rd2db" }
prjcombine_spartan6_naming = { path = "prjcombine_spartan6_naming" }
prjcombine_spartan6_rdverify = { path = "prjcombine_spartan6_rdverify" }
prjcombine_ultrascale_naming = { path = "prjcombine_ultrascale_naming" }
prjcombine_ultrascale_rdverify = { path = "prjcombine_ultrascale_rdverify" }
prjcombine_ultrascale_rd2db = { path = "prjcombine_ultrascale_rd2db" }
prjcombine_versal_naming = { path = "prjcombine_versal_naming" }
prjcombine_versal_rdverify = { path = "prjcombine_versal_rdverify" }
prjcombine_versal_rd2db = { path = "prjcombine_versal_rd2db" }
prjcombine_xilinx_geom = { path = "prjcombine_xilinx_geom" }
prjcombine_lattice_rawdump = { path = "prjcombine_lattice_rawdump" }
prjcombine_hammer = { path = "prjcombine_hammer" }
prjcombine_collector = { path = "prjcombine_collector" }
prjcombine_xact_naming = { path = "prjcombine_xact_naming" }
prjcombine_xc2000_xact = { path = "prjcombine_xc2000_xact" }
prjcombine_xact_geom = { path = "prjcombine_xact_geom" }
prjcombine_xact_data = { path = "prjcombine_xact_data" }
prjcombine_harvester = { path = "prjcombine_harvester" }
prjcombine_vm6 = { path = "prjcombine_vm6" }
prjcombine_xilinx_cpld = { path = "prjcombine_xilinx_cpld" }
prjcombine_ise_dump = { path = "prjcombine_ise_dump" }
prjcombine_sdf = { path = "prjcombine_sdf" }
indexmap = { version = "2", features = ["serde"] }
rand = { version = "0.9", features = ["small_rng"] }
nix = { version = "0.29", features = ["fs"] }
tempfile = "3.0"
toml = "0.8"
simple-error = "0.3"
regex = "1"
rayon = "1.5"
indicatif = "0.17"
std-semaphore = "0.1"
which = "7"
derive-where = "1.2"
bytes = "1.8.0"
hex = "0.4.3"

[profile.dev]
opt-level = 2
overflow-checks = false
debug-assertions = false
debug = 2

[workspace.lints.clippy]
collapsible_else_if = "allow"
bool_to_int_with_if = "allow"
needless_range_loop = "allow"
assigning_clones = "allow"
large_enum_variant = "allow"
nonminimal_bool = "allow"
precedence = "allow"
