# NOTE: this is the workspace containing RE-only crates; for the public crate workspace, see public/Cargo.toml
#
# Dependency versions should be kept in sync between the two workspaces.

[workspace]
resolver = "3"
members = [
	"re/toolchain",
	"re/hammer",
	"re/collector",
	"re/harvester",
	"re/sdf",
	"re/xilinx/rawdump",
	"re/xilinx/xdl",
	"re/xilinx/v2xdl-verify",
	"re/xilinx/ise-dump",
	"re/xilinx/vivado-dump",
	"re/xilinx/naming",
	"re/xilinx/naming/xc2000",
	"re/xilinx/naming/virtex",
	"re/xilinx/naming/virtex2",
	"re/xilinx/naming/virtex4",
	"re/xilinx/naming/spartan6",
	"re/xilinx/naming/ultrascale",
	"re/xilinx/naming/versal",
	"re/xilinx/geom",
	"re/xilinx/rdbuild",
	"re/xilinx/rd2db/grid",
	"re/xilinx/rd2db/interconnect",
	"re/xilinx/rd2db/xc4000",
	"re/xilinx/rd2db/xc5200",
	"re/xilinx/rd2db/virtex",
	"re/xilinx/rd2db/virtex2",
	"re/xilinx/rd2db/spartan6",
	"re/xilinx/rd2db/virtex4",
	"re/xilinx/rd2db/virtex5",
	"re/xilinx/rd2db/virtex6",
	"re/xilinx/rd2db/virtex7",
	"re/xilinx/rd2db/ultrascale",
	"re/xilinx/rd2db/versal",
	"re/xilinx/rdverify",
	"re/xilinx/rdverify/xc4000",
	"re/xilinx/rdverify/xc5200",
	"re/xilinx/rdverify/virtex",
	"re/xilinx/rdverify/virtex2",
	"re/xilinx/rdverify/spartan6",
	"re/xilinx/rdverify/virtex4",
	"re/xilinx/rdverify/virtex5",
	"re/xilinx/rdverify/virtex6",
	"re/xilinx/rdverify/virtex7",
	"re/xilinx/rdverify/ultrascale",
	"re/xilinx/rdverify/versal",
	"re/xilinx/rd2geom",
	"re/xilinx/ise-hammer",
	"re/xilinx/xact/naming",
	"re/xilinx/xact/xc2000",
	"re/xilinx/xact/geom",
	"re/xilinx/xact/data",
	"re/xilinx/xact/dump",
	"re/xilinx/xact/hammer",
	"re/xilinx/finish",
	"re/xilinx/rdis",
	"re/xilinx/cpld",
	"re/icecube-harvester",
	"re/lattice/dump",
	"re/lattice/rawdump",
]
exclude = ["public"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "0BSD OR Apache-2.0"
repository = "https://github.com/prjunnamed/prjcombine"
authors = []

[workspace.dependencies]
# public crates and their dependencies
prjcombine-types = { path = "public/types" }
prjcombine-interconnect = { path = "public/interconnect" }
prjcombine-siliconblue = { path = "public/siliconblue" }
prjcombine-xilinx-bitstream = { path = "public/xilinx-bitstream" }
prjcombine-xc2000 = { path = "public/xc2000" }
prjcombine-virtex = { path = "public/virtex" }
prjcombine-virtex2 = { path = "public/virtex2" }
prjcombine-spartan6 = { path = "public/spartan6" }
prjcombine-virtex4 = { path = "public/virtex4" }
prjcombine-ultrascale = { path = "public/ultrascale" }
prjcombine-versal = { path = "public/versal" }
prjcombine-xc9500 = { path = "public/xc9500" }
prjcombine-xpla3 = { path = "public/xpla3" }
prjcombine-coolrunner2 = { path = "public/coolrunner2" }
# dependencies shared with public crates (keep in sync)
serde = { version = "1.0", features = ["derive"] }
zstd = "0.13"
bincode = "1.3"
unnamed_entity = { version = "0.1.5", features = ["bitvec", "map", "serde"] }
bitvec = { version = "1.0", features = ["serde"] }
itertools = "0.14"
arrayvec = "0.7.6"
ndarray = { version = "0.16", features = ["serde"] }
enum-map = { version = "2.4", features = ["serde"] }
bimap = "0.6"
arrayref = "0.3.6"
assert_matches = "1.5"
clap = { version = "4.1", features = ["derive"] }
jzon = "0.12"
# RE-only crates and their dependencies
prjcombine-re-toolchain = { path = "re/toolchain" }
prjcombine-re-hammer = { path = "re/hammer" }
prjcombine-re-collector = { path = "re/collector" }
prjcombine-re-harvester = { path = "re/harvester" }
prjcombine-re-sdf = { path = "re/sdf" }
prjcombine-re-xilinx-rawdump = { path = "re/xilinx/rawdump" }
prjcombine-re-xilinx-rdbuild = { path = "re/xilinx/rdbuild" }
prjcombine-re-xilinx-xdl = { path = "re/xilinx/xdl" }
prjcombine-re-xilinx-ise-dump = { path = "re/xilinx/ise-dump" }
prjcombine-re-xilinx-naming = { path = "re/xilinx/naming" }
prjcombine-re-xilinx-naming-xc2000 = { path = "re/xilinx/naming/xc2000" }
prjcombine-re-xilinx-naming-virtex = { path = "re/xilinx/naming/virtex" }
prjcombine-re-xilinx-naming-virtex2 = { path = "re/xilinx/naming/virtex2" }
prjcombine-re-xilinx-naming-spartan6 = { path = "re/xilinx/naming/spartan6" }
prjcombine-re-xilinx-naming-virtex4 = { path = "re/xilinx/naming/virtex4" }
prjcombine-re-xilinx-naming-ultrascale = { path = "re/xilinx/naming/ultrascale" }
prjcombine-re-xilinx-naming-versal = { path = "re/xilinx/naming/versal" }
prjcombine-re-xilinx-geom = { path = "re/xilinx/geom" }
prjcombine-re-xilinx-rd2db-grid = { path = "re/xilinx/rd2db/grid" }
prjcombine-re-xilinx-rd2db-interconnect = { path = "re/xilinx/rd2db/interconnect" }
prjcombine-re-xilinx-rd2db-xc4000 = { path = "re/xilinx/rd2db/xc4000" }
prjcombine-re-xilinx-rd2db-xc5200 = { path = "re/xilinx/rd2db/xc5200" }
prjcombine-re-xilinx-rd2db-virtex = { path = "re/xilinx/rd2db/virtex" }
prjcombine-re-xilinx-rd2db-virtex2 = { path = "re/xilinx/rd2db/virtex2" }
prjcombine-re-xilinx-rd2db-spartan6 = { path = "re/xilinx/rd2db/spartan6" }
prjcombine-re-xilinx-rd2db-virtex4 = { path = "re/xilinx/rd2db/virtex4" }
prjcombine-re-xilinx-rd2db-virtex5 = { path = "re/xilinx/rd2db/virtex5" }
prjcombine-re-xilinx-rd2db-virtex6 = { path = "re/xilinx/rd2db/virtex6" }
prjcombine-re-xilinx-rd2db-virtex7 = { path = "re/xilinx/rd2db/virtex7" }
prjcombine-re-xilinx-rd2db-ultrascale = { path = "re/xilinx/rd2db/ultrascale" }
prjcombine-re-xilinx-rd2db-versal = { path = "re/xilinx/rd2db/versal" }
prjcombine-re-xilinx-rdverify = { path = "re/xilinx/rdverify" }
prjcombine-re-xilinx-rdverify-xc4000 = { path = "re/xilinx/rdverify/xc4000" }
prjcombine-re-xilinx-rdverify-xc5200 = { path = "re/xilinx/rdverify/xc5200" }
prjcombine-re-xilinx-rdverify-virtex = { path = "re/xilinx/rdverify/virtex" }
prjcombine-re-xilinx-rdverify-virtex2 = { path = "re/xilinx/rdverify/virtex2" }
prjcombine-re-xilinx-rdverify-virtex4 = { path = "re/xilinx/rdverify/virtex4" }
prjcombine-re-xilinx-rdverify-virtex5 = { path = "re/xilinx/rdverify/virtex5" }
prjcombine-re-xilinx-rdverify-virtex6 = { path = "re/xilinx/rdverify/virtex6" }
prjcombine-re-xilinx-rdverify-virtex7 = { path = "re/xilinx/rdverify/virtex7" }
prjcombine-re-xilinx-rdverify-spartan6 = { path = "re/xilinx/rdverify/spartan6" }
prjcombine-re-xilinx-rdverify-ultrascale = { path = "re/xilinx/rdverify/ultrascale" }
prjcombine-re-xilinx-rdverify-versal = { path = "re/xilinx/rdverify/versal" }
prjcombine-re-xilinx-xact-naming = { path = "re/xilinx/xact/naming" }
prjcombine-re-xilinx-xact-xc2000 = { path = "re/xilinx/xact/xc2000" }
prjcombine-re-xilinx-xact-geom = { path = "re/xilinx/xact/geom" }
prjcombine-re-xilinx-xact-data = { path = "re/xilinx/xact/data" }
prjcombine-re-xilinx-cpld = { path = "re/xilinx/cpld" }
prjcombine-re-lattice-rawdump = { path = "re/lattice/rawdump" }
indexmap = { version = "2", features = ["serde"] }
rand = { version = "0.9", features = ["small_rng"] }
nix = { version = "0.29", features = ["fs"] }
tempfile = "3.0"
toml = "0.8"
simple-error = "0.3"
regex = "1"
rayon = "1.5"
indicatif = "0.17"
std-semaphore = "0.1"
which = "7"
derive-where = "1.2"
bytes = "1.8.0"
hex = "0.4.3"

[profile.dev]
opt-level = 2
overflow-checks = false
debug-assertions = false
debug = 2

[workspace.lints.clippy]
collapsible_else_if = "allow"
bool_to_int_with_if = "allow"
needless_range_loop = "allow"
assigning_clones = "allow"
large_enum_variant = "allow"
nonminimal_bool = "allow"
precedence = "allow"
