[package]
name = "prjcombine_int"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
prjcombine_entity = { path = "../prjcombine_entity" }
enum-map = { version = "2.4.0", features = ["serde"] }
ndarray = { version = "0.15", features = ["serde"] }
