[package]
name = "prjcombine_ise_dump"
version.workspace = true
edition.workspace = true

[dependencies]
prjcombine_rawdump.workspace = true
prjcombine_rdbuild.workspace = true
prjcombine_toolchain.workspace = true
unnamed_entity.workspace = true
simple-error.workspace = true
tempfile.workspace = true
regex.workspace = true
rayon.workspace = true
clap.workspace = true

[lints]
workspace = true
