[package]
name = "prjcombine_ise_hammer"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ise_hammer"
path = "src/main.rs"

[dependencies]
prjcombine-types.workspace = true
prjcombine-interconnect.workspace = true
prjcombine-xc2000.workspace = true
prjcombine-virtex.workspace = true
prjcombine-virtex2.workspace = true
prjcombine-spartan6.workspace = true
prjcombine-virtex4.workspace = true
prjcombine-xilinx-bitstream.workspace = true
prjcombine_xilinx_geom.workspace = true
prjcombine_xilinx_naming.workspace = true
prjcombine_xdl.workspace = true
prjcombine_toolchain.workspace = true
prjcombine_hammer.workspace = true
prjcombine_collector.workspace = true
unnamed_entity.workspace = true
bitvec.workspace = true
clap.workspace = true
rand.workspace = true
simple-error.workspace = true
serde_json.workspace = true
itertools.workspace = true
hex.workspace = true

[lints]
workspace = true
