[package]
name = "prjcombine_lattice_dump"
version.workspace = true
edition.workspace = true

[dependencies]
prjcombine_entity.workspace = true
prjcombine_toolchain.workspace = true
prjcombine_lattice_rawdump.workspace = true
rayon.workspace = true
tempfile.workspace = true
clap.workspace = true
simple-error.workspace = true
ndarray.workspace = true
regex.workspace = true
serde.workspace = true
