[package]
name = "prjcombine_lattice_rawdump"
version.workspace = true
edition.workspace = true

[dependencies]
unnamed_entity.workspace = true
ndarray.workspace = true
serde.workspace = true
bincode.workspace = true
zstd.workspace = true
clap.workspace = true
itertools.workspace = true

[lints]
workspace = true
