[package]
name = "prjcombine_rdintb"
version.workspace = true
edition.workspace = true

[dependencies]
unnamed_entity.workspace = true
prjcombine_int.workspace = true
prjcombine_xilinx_naming.workspace = true
prjcombine_rawdump.workspace = true
assert_matches.workspace = true
enum-map.workspace = true

[lints]
workspace = true
