[package]
name = "prjcombine_rdverify"
version.workspace = true
edition.workspace = true

[dependencies]
unnamed_entity.workspace = true
prjcombine-interconnect.workspace = true
prjcombine_xilinx_naming.workspace = true
prjcombine_rawdump.workspace = true
bitvec.workspace = true

[lints]
workspace = true
