[package]
name = "prjcombine_series7_rd2db"
version.workspace = true
edition.workspace = true

[dependencies]
prjcombine_entity.workspace = true
prjcombine_int.workspace = true
prjcombine_rdintb.workspace = true
prjcombine_rdgrid.workspace = true
prjcombine_rawdump.workspace = true
prjcombine_series7.workspace = true
