[package]
name = "prjcombine_spartan6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
prjcombine_entity = { path = "../prjcombine_entity" }
prjcombine_int = { path = "../prjcombine_int" }
