[package]
name = "prjcombine_spartan6_rd2db"
version.workspace = true
edition.workspace = true

[dependencies]
prjcombine_entity.workspace = true
prjcombine_int.workspace = true
prjcombine_rdintb.workspace = true
prjcombine_rdgrid.workspace = true
prjcombine_rawdump.workspace = true
prjcombine_spartan6.workspace = true
