[package]
name = "prjcombine_ultrascale_naming"
edition.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
unnamed_entity.workspace = true
prjcombine-interconnect.workspace = true
prjcombine_xilinx_naming.workspace = true
prjcombine-ultrascale.workspace = true

[lints]
workspace = true
