[package]
name = "prjcombine_ultrascale_rd2db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prjcombine_entity = { path = "../prjcombine_entity" }
prjcombine_int = { path = "../prjcombine_int" }
prjcombine_rdintb = { path = "../prjcombine_rdintb" }
prjcombine_rdgrid = { path = "../prjcombine_rdgrid" }
prjcombine_rawdump = { path = "../prjcombine_rawdump" }
prjcombine_ultrascale = { path = "../prjcombine_ultrascale" }
enum-map = { version = "2.4.0", features = ["serde"] }
