[package]
name = "prjcombine_ultrascale_rdverify"
version.workspace = true
edition.workspace = true

[dependencies]
unnamed_entity.workspace = true
prjcombine_int.workspace = true
prjcombine_xilinx_naming.workspace = true
prjcombine_rawdump.workspace = true
prjcombine_rdverify.workspace = true
prjcombine_ultrascale.workspace = true
prjcombine_ultrascale_naming.workspace = true

[lints]
workspace = true
