[package]
name = "prjcombine_v2xdl_verify"
version.workspace = true
edition.workspace = true

[dependencies]
prjcombine_toolchain.workspace = true
prjcombine_xdl.workspace = true
rand.workspace = true
clap.workspace = true
tempfile.workspace = true
simple-error.workspace = true
rayon.workspace = true

[lints]
workspace = true
