[package]
name = "prjcombine_versal_naming"
edition.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
enum-map.workspace = true
unnamed_entity.workspace = true
prjcombine-interconnect.workspace = true
prjcombine_xilinx_naming.workspace = true
prjcombine-versal.workspace = true

[lints]
workspace = true
