[package]
name = "prjcombine_versal_rd2db"
version.workspace = true
edition.workspace = true

[dependencies]
unnamed_entity.workspace = true
prjcombine_int.workspace = true
prjcombine_xilinx_naming.workspace = true
prjcombine_rdintb.workspace = true
prjcombine_rdgrid.workspace = true
prjcombine_rawdump.workspace = true
prjcombine_versal.workspace = true
prjcombine_versal_naming.workspace = true
enum-map.workspace = true

[lints]
workspace = true
