[package]
name = "prjcombine_virtex"
version.workspace = true
edition.workspace = true

[dependencies]
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
zstd.workspace = true
bincode.workspace = true
unnamed_entity.workspace = true
prjcombine_types.workspace = true
prjcombine_int.workspace = true
prjcombine_virtex_bitstream.workspace = true

[lints]
workspace = true
