[package]
name = "prjcombine_virtex2_rdverify"
version.workspace = true
edition.workspace = true

[dependencies]
unnamed_entity.workspace = true
prjcombine_int.workspace = true
prjcombine_xilinx_naming.workspace = true
prjcombine_rawdump.workspace = true
prjcombine_rdverify.workspace = true
prjcombine_virtex2.workspace = true
prjcombine_virtex2_naming.workspace = true

[lints]
workspace = true
