[package]
name = "prjcombine_virtex4"
version.workspace = true
edition.workspace = true

[dependencies]
itertools.workspace = true
enum-map.workspace = true
serde_json.workspace = true
zstd.workspace = true
bincode.workspace = true
unnamed_entity.workspace = true
prjcombine_types.workspace = true
prjcombine_int.workspace = true
prjcombine_virtex_bitstream.workspace = true
assert_matches.workspace = true
serde.workspace = true
bimap.workspace = true

[lints]
workspace = true
