[package]
name = "prjcombine_virtex4_naming"
edition.workspace = true
version.workspace = true

[dependencies]
enum-map.workspace = true
unnamed_entity.workspace = true
prjcombine-interconnect.workspace = true
prjcombine_xilinx_naming.workspace = true
prjcombine-virtex4.workspace = true

[lints]
workspace = true
