[package]
name = "prjcombine_virtex4_rdverify"
version.workspace = true
edition.workspace = true

[dependencies]
unnamed_entity.workspace = true
prjcombine_int.workspace = true
prjcombine_xilinx_naming.workspace = true
prjcombine_rawdump.workspace = true
prjcombine_rdverify.workspace = true
prjcombine_virtex4.workspace = true
prjcombine_virtex4_naming.workspace = true

[lints]
workspace = true
